// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown multi-select Renders multiselect Dropdown correctly 1`] = `
<div
  className=
      ms-Dropdown-container

>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    className=
        ms-Dropdown
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          border-color: #605e5c;
          box-shadow: none;
          box-sizing: border-box;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          outline: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          position: relative;
          user-select: none;
        }
        &:hover .ms-Dropdown-title {
          border-color: #323130;
          color: #201f1e;
        }
        @media screen and (-ms-high-contrast: active){&:hover .ms-Dropdown-title {
          border-color: Highlight;
        }
        &:focus .ms-Dropdown-title {
          border-color: #0078d4;
          border-width: 2px;
          color: #201f1e;
          left: -1px;
          top: -1px;
        }
        @media screen and (-ms-high-contrast: active){&:focus .ms-Dropdown-title {
          background-color: Highlight;
          border-color: Highlight;
          color: HighlightText;
        }
        @media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: black-on-white){&:focus .ms-Dropdown-title {
          -ms-high-contrast-adjust: none;
        }
        &:active .ms-Dropdown-title {
          border-color: #0078d4;
          color: #201f1e;
        }
        @media screen and (-ms-high-contrast: active){&:active .ms-Dropdown-title {
          border-color: Highlight;
        }
        &:hover .ms-Dropdown-caretDown {
          color: #323130;
        }
        &:focus .ms-Dropdown-caretDown {
          color: #323130;
        }
        @media screen and (-ms-high-contrast: active){&:focus .ms-Dropdown-caretDown {
          color: HighlightText;
        }
        @media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: black-on-white){&:focus .ms-Dropdown-caretDown {
          -ms-high-contrast-adjust: none;
        }
        &:active .ms-Dropdown-caretDown {
          color: #323130;
        }
        &:hover .ms-Dropdown-titleIsPlaceHolder {
          color: #323130;
        }
        &:focus .ms-Dropdown-titleIsPlaceHolder {
          color: #323130;
        }
        &:active .ms-Dropdown-titleIsPlaceHolder {
          color: #323130;
        }
        &:hover .ms-Dropdown-title--hasError {
          border-color: #a4262c;
        }
        &:active .ms-Dropdown-title--hasError {
          border-color: #a4262c;
        }
    data-is-focusable={true}
    id="Dropdown0"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    tabIndex={0}
  >
    <span
      aria-atomic={true}
      aria-invalid={false}
      aria-live="polite"
      className=
          ms-Dropdown-title
          ms-Dropdown-titleIsPlaceHolder
          {
            background-color: #ffffff;
            border-color: #8a8886;
            border-radius: 2px;
            border-style: solid;
            border-width: 1px;
            box-shadow: none;
            box-sizing: border-box;
            color: #605e5c;
            cursor: pointer;
            display: block;
            height: 32px;
            line-height: 30px;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow: hidden;
            padding-bottom: 0;
            padding-left: 8px;
            padding-right: 28px;
            padding-top: 0;
            position: relative;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      id="Dropdown0-option"
    />
    <span
      className=
          ms-Dropdown-caretDownWrapper
          {
            cursor: pointer;
            height: 32px;
            line-height: 30px;
            position: absolute;
            right: 8px;
            top: 1px;
          }
    >
      <i
        aria-hidden={true}
        className=
            ms-Dropdown-caretDown
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-size: 12px;
              font-style: normal;
              font-weight: normal;
              pointer-events: none;
              speak: none;
            }
        data-icon-name="ChevronDown"
      >
        
      </i>
    </span>
  </div>
</div>
`;

exports[`Dropdown single-select Renders single-select Dropdown correctly 1`] = `
<div
  className=
      ms-Dropdown-container

>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    className=
        ms-Dropdown
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          border-color: #605e5c;
          box-shadow: none;
          box-sizing: border-box;
          color: #323130;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
          outline: 0px;
          padding-bottom: 0px;
          padding-left: 0px;
          padding-right: 0px;
          padding-top: 0px;
          position: relative;
          user-select: none;
        }
        &:hover .ms-Dropdown-title {
          border-color: #323130;
          color: #201f1e;
        }
        @media screen and (-ms-high-contrast: active){&:hover .ms-Dropdown-title {
          border-color: Highlight;
        }
        &:focus .ms-Dropdown-title {
          border-color: #0078d4;
          border-width: 2px;
          color: #201f1e;
          left: -1px;
          top: -1px;
        }
        @media screen and (-ms-high-contrast: active){&:focus .ms-Dropdown-title {
          background-color: Highlight;
          border-color: Highlight;
          color: HighlightText;
        }
        @media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: black-on-white){&:focus .ms-Dropdown-title {
          -ms-high-contrast-adjust: none;
        }
        &:active .ms-Dropdown-title {
          border-color: #0078d4;
          color: #201f1e;
        }
        @media screen and (-ms-high-contrast: active){&:active .ms-Dropdown-title {
          border-color: Highlight;
        }
        &:hover .ms-Dropdown-caretDown {
          color: #323130;
        }
        &:focus .ms-Dropdown-caretDown {
          color: #323130;
        }
        @media screen and (-ms-high-contrast: active){&:focus .ms-Dropdown-caretDown {
          color: HighlightText;
        }
        @media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: black-on-white){&:focus .ms-Dropdown-caretDown {
          -ms-high-contrast-adjust: none;
        }
        &:active .ms-Dropdown-caretDown {
          color: #323130;
        }
        &:hover .ms-Dropdown-titleIsPlaceHolder {
          color: #323130;
        }
        &:focus .ms-Dropdown-titleIsPlaceHolder {
          color: #323130;
        }
        &:active .ms-Dropdown-titleIsPlaceHolder {
          color: #323130;
        }
        &:hover .ms-Dropdown-title--hasError {
          border-color: #a4262c;
        }
        &:active .ms-Dropdown-title--hasError {
          border-color: #a4262c;
        }
    data-is-focusable={true}
    id="Dropdown0"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    tabIndex={0}
  >
    <span
      aria-atomic={true}
      aria-invalid={false}
      aria-live="polite"
      aria-setsize={6}
      className=
          ms-Dropdown-title
          ms-Dropdown-titleIsPlaceHolder
          {
            background-color: #ffffff;
            border-color: #8a8886;
            border-radius: 2px;
            border-style: solid;
            border-width: 1px;
            box-shadow: none;
            box-sizing: border-box;
            color: #605e5c;
            cursor: pointer;
            display: block;
            height: 32px;
            line-height: 30px;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow: hidden;
            padding-bottom: 0;
            padding-left: 8px;
            padding-right: 28px;
            padding-top: 0;
            position: relative;
            text-overflow: ellipsis;
            white-space: nowrap;
          }
      id="Dropdown0-option"
      role="option"
    />
    <span
      className=
          ms-Dropdown-caretDownWrapper
          {
            cursor: pointer;
            height: 32px;
            line-height: 30px;
            position: absolute;
            right: 8px;
            top: 1px;
          }
    >
      <i
        aria-hidden={true}
        className=
            ms-Dropdown-caretDown
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              color: #605e5c;
              display: inline-block;
              font-family: "FabricMDL2Icons";
              font-size: 12px;
              font-style: normal;
              font-weight: normal;
              pointer-events: none;
              speak: none;
            }
        data-icon-name="ChevronDown"
      >
        
      </i>
    </span>
  </div>
</div>
`;
